Corrections from presentation ReadMe and licence update